tests/ui/underscore-lifetime/dyn-trait-underscore.stderr
error: lifetime may not live long enough
  --> $DIR/dyn-trait-underscore.rs:8:5
   |
LL | fn a<T>(items: &[T]) -> Box<dyn Iterator<Item=&T>> {
   |                - let's call the lifetime of this reference `'1`
LL |     //                      ^^^^^^^^^^^^^^^^^^^^^ bound *here* defaults to `'static`
LL |     Box::new(items.iter())
   |     ^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'static`
   |
help: to declare that the trait object captures data from argument `items`, you can add an explicit `'_` lifetime bound
   |
LL | fn a<T>(items: &[T]) -> Box<dyn Iterator<Item=&T> + '_> {
   |                                                   ++++

error: aborting due to 1 previous error

